# FedRRT_CD

./: .gitignore  Analysis.ipynb  README.md  incremental_drift.ipynb  incremental_drift_with_end.ipynb  paper.ipynb  pre_flwr_run.py  pyproject.toml  t_start_drift.ipynb
analysis/: dataset.ipynb
src/: client_app.py  data_loader.py  server_app.py
src/ml_models/: net.py
src/plots_abrupt/: results_drift-case.json  results_fedau-case.json  results_rapid-retraining-case.json  results_retraining-case.json
src/plots_fmnist/plots_incre_end_fmnist_1/: results_drift-case.json  results_fedau-case.json  results_fl-case.json  results_fluid-case.json  results_rapid-retraining-case.json  results_retraining-case.json
src/plots_fmnist/plots_incre_end_fmnist_2/: results_drift-case.json  results_fedau-case.json  results_fl-case.json  results_fluid-case.json  results_rapid-retraining-case.json  results_retraining-case.json
src/plots_fmnist/plots_incre_end_fmnist_3/: results_drift-case.json  results_fedau-case.json  results_fl-case.json  results_fluid-case.json  results_rapid-retraining-case.json  results_retraining-case.json
src/plots_mnist/plots_incre_end_mnist_1/: results_drift-case.json  results_fedau-case.json  results_fl-case.json  results_fluid-case.json  results_rapid-retraining-case.json  results_retraining-case.json
src/plots_mnist/plots_incre_end_mnist_2/: results_drift-case.json  results_fedau-case.json  results_fl-case.json  results_fluid-case.json  results_rapid-retraining-case.json  results_retraining-case.json
src/plots_mnist/plots_incre_end_mnist_3/: results_drift-case.json  results_fedau-case.json  results_fl-case.json  results_fluid-case.json  results_rapid-retraining-case.json  results_retraining-case.json
src/scripts/: prepare_dataset.py
